--- a/.gitmodules
+++ b/.gitmodules
@@ -10,12 +10,12 @@
 [submodule "modules/kostache"]
 	path = modules/kostache
 	url = git://github.com/zombor/KOstache.git
-[submodule "modules/tasks-assets"]
-	path = modules/tasks-assets
-	url = git://github.com/iGore/tasks-assets.git
 [submodule "modules/minion"]
 	path = modules/minion
 	url = git://github.com/kohana/minion.git
 [submodule "modules/unittest"]
 	path = modules/unittest
 	url = git://github.com/kohana/unittest.git
+[submodule "modules/beautiful-asset"]
+	path = modules/beautiful-asset
+	url = git://github.com/beautiful/asset.git
